--- a/api/tests/integration/breeding_sites/create.tavern.yml
+++ b/api/tests/integration/breeding_sites/create.tavern.yml
@@ -44,7 +44,7 @@ stages:
         created_at: '2024-01-01T00:00:00Z'
         sent_at: '2024-01-01T00:30:00Z'
         location.point: !raw '{"latitude": 41.67419, "longitude": 2.79036}'
-        location.type: 'current'
+        location.source: 'auto'
         note: "Test"
         tags:
           - tag1
@@ -63,14 +63,16 @@ stages:
         received_at: !re_fullmatch \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{6}Z
         updated_at: !re_fullmatch \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{6}Z
         location:
-          type: 'current'
+          source: 'auto'
           timezone: 'Europe/Madrid'
           point:
             latitude: 41.67419
             longitude: 2.79036
           country_id: !anything
-          nuts_2: !anything
-          nuts_3: !anything
+          adm_boundaries:
+            nuts:
+              nuts2: !anything
+              nuts3: !anything
         note: Test
         tags: !anylist
         published: false
