Added Report.published_at (#297)
* Added Report.published_at

* Remove Report.cached_visible

* Make Report.objects.published accept state

* Using Report.is_browsable property

* Using published_at=None to mark reports as unpublished

* Ensure reports publication is correclty managed

* CheckConstraint for when public must be browsable

* Add Report.PUBLISHABLE_TYPES

* Bugfix: MapDataSerializer.visible

* Add logic for Report.SITE on is_expert_validated

* Ensure Breeding site reports are hidden correctly

* Added Report.published

--- a/api/tests/integration/bites/create.tavern.yml
+++ b/api/tests/integration/bites/create.tavern.yml
@@ -71,7 +71,7 @@ stages:
               nuts3: !anything
         note: Test
         tags: !anylist
-        published: false
+        published: true
         event_environment: indoors
         event_moment: now
         bite_count: 3
