--- a/api/tests/integration/observations/create.tavern.yml
+++ b/api/tests/integration/observations/create.tavern.yml
@@ -77,6 +77,7 @@ stages:
             url: !anystr
           - uuid: !anystr
             url: !anystr
+        identification: !anydict
         event_environment: !anything
         event_moment: !anything
         user_perceived_mosquito_specie: !anything
