Added identification tasks endpoint

--- a/api/tests/integration/observations/create.tavern.yml
+++ b/api/tests/integration/observations/create.tavern.yml
@@ -82,6 +82,7 @@ stages:
             url: !anystr
           - uuid: !anystr
             url: !anystr
+        identification: !anydict
         event_environment: !anything
         event_moment: !anything
         mosquito_appearance:
