Make nuts nullable and controll allow_null on other fields

--- a/api/tests/integration/observations/create.tavern.yml
+++ b/api/tests/integration/observations/create.tavern.yml
@@ -68,9 +68,7 @@ stages:
             longitude: 2.79036
           country_id: !anything
           adm_boundaries:
-            nuts:
-              nuts2: !anything
-              nuts3: !anything
+            nuts: !anything
         note: Test
         tags: !anylist
         published: false
