--- a/api/tests/integration/bites/create.tavern.yml
+++ b/api/tests/integration/bites/create.tavern.yml
@@ -66,9 +66,7 @@ stages:
             longitude: 2.79036
           country_id: !anything
           adm_boundaries:
-            nuts:
-              nuts2: !anything
-              nuts3: !anything
+            nuts: !anything
         note: Test
         tags: !anylist
         published: true
