Expose location_display_name

--- a/api/tests/integration/observations/create.tavern.yml
+++ b/api/tests/integration/observations/create.tavern.yml
@@ -67,6 +67,7 @@ stages:
             latitude: 41.67419
             longitude: 2.79036
           country_id: !anything
+          display_name: !anything
           adm_boundaries: !anylist
         note: Test
         tags: !anylist
