--- a/api/tests/integration/breeding_sites/create.tavern.yml
+++ b/api/tests/integration/breeding_sites/create.tavern.yml
@@ -29,6 +29,7 @@ marks:
     - test_jpg_image_path
     - test_png_image_path
     - test_non_image_path
+    - es_country
 
 stages:
   - name: Create breeding site report with image
@@ -68,7 +69,10 @@ stages:
           point:
             latitude: 41.67419
             longitude: 2.79036
-          country_id: !anything
+          country:
+            id: !anyint
+            name_en: !anystr
+            iso3_code: !anystr
           display_name: !anything
           adm_boundaries: !anylist
         note: Test
