--- a/api/tests/integration/identification_tasks/get.tavern.yml
+++ b/api/tests/integration/identification_tasks/get.tavern.yml
@@ -62,3 +62,51 @@ stages:
     response:
       status_code: 200
       json: !force_format_include "{response_data_validation}"
+
+---
+
+test_name: Archived identification tasks can not be retrieved.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - archived_identification_task
+    - token_user_can_view
+
+stages:
+  - name: User with perm view can not retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/{archived_identification_task.report.pk}/"
+      method: "GET"
+      headers:
+        Authorization: "Token {token_user_can_view:s}"
+    response:
+      status_code: 404
+
+
+---
+
+test_name: Archived identification tasks can be retrieved if view_archived_identificationtasks permission.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - archived_identification_task
+    - token_user_can_view
+    - token_user_can_view_archived_identificationtasks
+
+stages:
+  - name: User with perm view can not retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/{archived_identification_task.report.pk}/"
+      method: "GET"
+      headers:
+        Authorization: "Token {token_user_can_view_archived_identificationtasks:s}"
+    response:
+      status_code: 200
