--- a/api/tests/integration/identification_tasks/list.tavern.yml
+++ b/api/tests/integration/identification_tasks/list.tavern.yml
@@ -59,3 +59,61 @@ stages:
     response:
       status_code: 200
       json: !force_format_include "{response_list_data_validation}"
+
+---
+
+test_name: Archived identification tasks will not be list.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - archived_identification_task
+    - token_user_can_view
+
+stages:
+  - name: User with perm view can not retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+      headers:
+        Authorization: "Token {token_user_can_view:s}"
+    response:
+      status_code: 200
+      strict:
+        - json:off
+      json:
+        count: 0
+
+---
+
+test_name: Archived identification tasks will be listed if view_archived_identificationtasks permission.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - archived_identification_task
+    - token_user_can_view
+    - token_user_can_view_archived_identificationtasks
+
+stages:
+  - name: User with perm view can not retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+      headers:
+        Authorization: "Token {token_user_can_view_archived_identificationtasks:s}"
+    response:
+      status_code: 200
+      strict:
+        - json:off
+      json:
+        count: 1
+        results:
+          - observation:
+              uuid: "{archived_identification_task.report.pk}"
